--- a/Makefile.am
+++ b/Makefile.am
@@ -3,7 +3,10 @@
 ACLOCAL_AMFLAGS		= -I meta/autotools
 AUTOMAKE_OPTIONS	= foreign
 SUBDIRS			= src doc tests
-EXTRA_DIST		= INSTALL
+EXTRA_DIST		= INSTALL meta/scripts/ucl.pc.in
 dist_doc_DATA		= README COPYING
+
+pkgconfigdir		= $(libdir)/pkgconfig
+nodist_pkgconfig_DATA	= meta/scripts/ucl.pc
 
 ### end of file
