updated gcc version required for coverage

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 # .travis.yml --
 #
-# Travis CI configuration for CCTemplate.
+# Travis CI configuration for UCL.
 
 #page
 #### about branch selection
@@ -120,7 +120,6 @@ install:
    - ./meta/travis-ci/install-ccmemory.sh
    - ./meta/travis-ci/install-ccstructs.sh
    - ./meta/travis-ci/install-cctests.sh
-#  - ./meta/travis-ci/install-some-dependency.sh
 
 #page
 #### build scripts
@@ -214,20 +213,20 @@ matrix:
       compiler: clang
       script: "./configure --enable-maintainer-mode; make all CFLAGS='-Wno-unknown-attributes'; make check CFLAGS='-Wno-unknown-attributes';"
 
-    # Codecov support under Ubuntu GNU+Linux "trusty", GCC 7.
+    # Codecov support under Ubuntu GNU+Linux "trusty", GCC 8.
     - os: linux
       dist: trusty
-      compiler: gcc-7
+      compiler: gcc-8
       addons:
         apt:
           sources:
             - ubuntu-toolchain-r-test
           packages:
             - texinfo
-            - gcc-7
+            - gcc-8
       script: "./configure --enable-maintainer-mode CFLAGS='-O0 --coverage'; make all; make check;"
       after_success:
-        bash <(curl -s https://codecov.io/bash) -xgcov-7
+        bash <(curl -s https://codecov.io/bash) -xgcov-8
 
 #page
 #### done
