--- a/configure.ac
+++ b/configure.ac
@@ -33,7 +33,7 @@ AC_CONFIG_AUX_DIR([meta/autotools])
 AC_CANONICAL_BUILD
 AC_CANONICAL_HOST
 AC_CANONICAL_TARGET
-AM_INIT_AUTOMAKE([foreign subdir-objects])
+AM_INIT_AUTOMAKE([1.16 foreign subdir-objects])
 AM_MAINTAINER_MODE
 
 AM_PROG_AR
@@ -79,8 +79,9 @@ dnl AC_CACHE_SAVE
 
 #### external libraries
 
-MMUX_CHECK_PKG_CONFIG_MACROS
+PKG_PREREQ([0.29])
 PKG_INSTALLDIR
+MMUX_CHECK_PKG_CONFIG_MACROS
 PKG_CHECK_MODULES([CCEXCEPTIONS],[ccexceptions >= 0.8.0])
 PKG_CHECK_MODULES([CCMEMORY],[ccmemory >= 0.2.1])
 PKG_CHECK_MODULES([CCSTRUCTS],[ccstructs >= 0.2.0])
