--- a/.travis.yml
+++ b/.travis.yml
@@ -29,7 +29,7 @@
 #page
 #### about compiler packages
 #
-# We select build  by build the packages to  install; it should speed up preparation.   By putting a
+# We select build-by-build  the packages to install;  it should speed up preparation.   By putting a
 # single "addons" key at the top level: we would cause all the compilers to be installed for all the
 # builds in the matrix; we do not want this.
 
@@ -52,30 +52,27 @@
 #page
 #### about dependency packages
 #
-# We install dependency packages under "/tmp/mine", so  appropriate directories must be added to the
+# We install dependency packages under "/usr/local", so appropriate directories must be added to the
 # global path  environment variables, otherwise  the installed packages will  not be found  and used
 # correctly by the "configure" script.
 #
 # Notice  that (as  of May  17, 2018)  Travis CI's  run-time system  raises a  warning if  the first
-# directory in the  PATH environment variable is not the  one that it sets.  So, for  now, we append
-# the custom directory rather than prepend it; this is not the best if we want to make sure that the
-# executables we install are found before the one installed by the platform.
+# directory in the PATH  environment variable is not the one that it  sets.  This causes problems if
+# we install the dependencies under the directory "/tmp".
 #
 # We need the following in the global environment:
 #
 #   env:
 #     global:
-#       - PATH=$PATH:/tmp/mine/bin;
-#       - LD_LIBRARY_PATH=/tmp/mine/lib:$LD_LIBRARY_PATH;
-#       - PKG_CONFIG_PATH=/tmp/mine/lib/pkgconfig:$PKG_CONFIG_PATH;
+#       - PKG_CONFIG_PATH=/usr/local/lib/pkgconfig:/usr/local/share/pkgconfig:$PKG_CONFIG_PATH;
+#       - ACLOCAL_PATH=/usr/local/share/aclocal:$ACLOCAL_PATH;
 #
 # Alternatively, we  can put the  following in every "script:"  key, before running  the "configure"
 # script as follows:
 #
 #   script: |
-#     export PATH=$PATH:/tmp/mine/bin;
-#     export LD_LIBRARY_PATH=/tmp/mine/lib:$LD_LIBRARY_PATH;
-#     export PKG_CONFIG_PATH=/tmp/mine/lib/pkgconfig:$PKG_CONFIG_PATH;
+#     export PKG_CONFIG_PATH=/usr/local/lib/pkgconfig:/usr/local/share/pkgconfig:$PKG_CONFIG_PATH;
+#     export ACLOCAL_PATH=/usr/local/share/aclocal:$ACLOCAL_PATH;
 #     ./configure
 #
 
@@ -84,7 +81,9 @@
 
 language: c
 
-#sudo: true
+# We need sudo to install the dependencies under "/usr/local".
+#
+sudo: true
 
 # Let's just look at the project's dashboard at Travis CI's site.
 #
@@ -96,38 +95,50 @@ notifications:
 git:
   depth: 1
 
-branches:
-  only:
-    - master
+# It is possible to select which branches to process.
+#
+# branches:
+#   only:
+#     - master
 
 # NOTE  There  must  be only  *one*  env.global  key!!!   Otherwise  the earlier  settings  will  be
-# ineffective.  Setting the variable  VERBOSE will cause "make check "  to print "test-suite.log" in
-# case some tests fail.
+# ineffective.
+#
+# Setting the variable VERBOSE causes "make check" to output the file "test-suite.log".
 #
 env:
   global:
     - MAKEFLAGS="-j 2"
-    - PATH=$PATH:/tmp/mine/bin
-    - LD_LIBRARY_PATH=/tmp/mine/lib:$LD_LIBRARY_PATH;
-    - PKG_CONFIG_PATH=/tmp/mine/lib/pkgconfig:$PKG_CONFIG_PATH;
-    - VERBOSE=yes;
+    - VERBOSE=1
+    - LD_LIBRARY_PATH=/usr/local/lib:$LD_LIBRARY_PATH;
+    - LD_RUN_PATH=/usr/local/lib:$LD_RUN_PATH;
+    - PKG_CONFIG_PATH=/usr/local/lib/pkgconfig:/usr/local/share/pkgconfig:$PKG_CONFIG_PATH;
+    - ACLOCAL_PATH=/usr/local/share/aclocal:$ACLOCAL_PATH;
 
 #page
 #### dependencies management
+#
 
 install:
-   - ./meta/travis-ci/install-ccexceptions.sh
-   - ./meta/travis-ci/install-ccmemory.sh
-   - ./meta/travis-ci/install-ccstructs.sh
-   - ./meta/travis-ci/install-cctests.sh
+  - ./meta/travis-ci/install-pkg-config.sh;
+  - ./meta/travis-ci/install-autoconf.sh;
+  - ./meta/travis-ci/install-automake.sh;
+  - ./meta/travis-ci/install-texinfo.sh;
+  - ./meta/travis-ci/install-ccexceptions.sh
+  - ./meta/travis-ci/install-ccmemory.sh
+  - ./meta/travis-ci/install-ccstructs.sh
+  - ./meta/travis-ci/install-cctests.sh
 
 #page
 #### build scripts
 
 before_script:
-  # On Linux the GNU Libtool  preparation script is called "libtoolize",
-  # while on OS X it is called "glibtoolize".
+  # On Linux the GNU  Libtool preparation script is called "libtoolize", while on  OS X it is called
+  # "glibtoolize".
   - if test "$TRAVIS_OS_NAME" = osx ; then export LIBTOOLIZE=glibtoolize; else true; fi
+  - echo pkg-config --version ; pkg-config --version;
+  - echo autoconf --version ; autoconf --version;
+  - echo automake --version ; automake --version;
   - sh ./autogen.sh;
 
 matrix:
@@ -186,8 +197,7 @@ matrix:
             - gcc-8
       script: "./configure --enable-maintainer-mode; make all; make check;"
 
-    # Plain build  under Ubuntu GNU+Linux "trusty",  CLang automatically
-    # selected by Travis CI.
+    # Plain build under Ubuntu GNU+Linux "trusty", CLang automatically selected by Travis CI.
     - os: linux
       dist: trusty
       addons:
@@ -197,21 +207,19 @@ matrix:
           packages:
             - texinfo
       compiler: clang
-      script: "./configure --enable-maintainer-mode; make all CFLAGS='-Wno-unknown-attributes'; make check CFLAGS='-Wno-unknown-attributes';"
+      script: "./configure --enable-maintainer-mode CFLAGS='-Wno-unknown-attributes'; make all; make check;"
 
-    # Plain build under OS X, XCode 7.3, CLang automatically selected by
-    # Travis CI.
+    # Plain build under OS X, XCode 7.3, CLang automatically selected by Travis CI.
     - os: osx
       osx_image: xcode7.3
       compiler: clang
-      script: "./configure --enable-maintainer-mode; make all CFLAGS='-Wno-unknown-attributes'; make check CFLAGS='-Wno-unknown-attributes';"
+      script: "./configure --enable-maintainer-mode CFLAGS='-Wno-unknown-attributes'; make all; make check;"
 
-    # Plain build under OS X, XCode 8.3, CLang automatically selected by
-    # Travis CI.
+    # Plain build under OS X, XCode 8.3, CLang automatically selected by Travis CI.
     - os: osx
       osx_image: xcode8.3
       compiler: clang
-      script: "./configure --enable-maintainer-mode; make all CFLAGS='-Wno-unknown-attributes'; make check CFLAGS='-Wno-unknown-attributes';"
+      script: "./configure --enable-maintainer-mode CFLAGS='-Wno-unknown-attributes'; make all; make check;"
 
     # Codecov support under Ubuntu GNU+Linux "trusty", GCC 8.
     - os: linux
@@ -227,8 +235,5 @@ matrix:
       script: "./configure --enable-maintainer-mode CFLAGS='-O0 --coverage'; make all; make check;"
       after_success:
         bash <(curl -s https://codecov.io/bash) -xgcov-8
-
-#page
-#### done
 
 ### end of file
