--- a/Makefile.am
+++ b/Makefile.am
@@ -20,8 +20,12 @@ AM_MAKEINFOHTMLFLAGS	= --split=node -c WORDS_IN_PAGE=0 \
 
 info_TEXINFOS		= doc/ucl.texi
 doc_ucl_TEXINFOS	= \
-	doc/macros.texi		\
-	doc/lgpl-3.0.texi	\
+	doc/macros.texi			\
+	doc/overview-linking.texi	\
+	doc/overview-ccnames.texi	\
+	doc/overview-ccexceptions.texi	\
+	doc/overview-ccmemory.texi	\
+	doc/lgpl-3.0.texi		\
 	doc/fdl-1.3.texi
 
 
